# mimalloc_rust

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  build.rs  vim.exe.stackdump
.cargo/: config
.github/workflows/: ci.yml
libmimalloc-sys/: BUILD.bazel  Cargo.toml  build.rs
libmimalloc-sys/.cargo/: config.txt
libmimalloc-sys/src/: extended.rs  lib.rs
libmimalloc-sys/sys-test/: Cargo.toml  build.rs
libmimalloc-sys/sys-test/src/: main.rs
src/: extended.rs  ffi.rs  lib.rs  nightly_allocator_api.rs
test-override-with-dylib/: Cargo.toml
