[package]
name = "mimalloc"
version = "0.1.28"
authors = [
    "Octavian Oncescu <octavonce@gmail.com>",
    "Vincent Rouillé <vincent@speedy37.fr>",
    "Thom Chiovoloni <chiovolonit@gmail.com>",
]
edition = "2018"
repository = "https://github.com/purpleprotocol/mimalloc_rust"
keywords = ["mimalloc", "allocator", "encrypted-heap", "performance"]
categories = ["memory-management", "api-bindings"]
description = "Performance and security oriented drop-in allocator"
license = "MIT"
readme = "README.md"

[workspace]
members = ["libmimalloc-sys", "libmimalloc-sys/sys-test"]

[badges]
travis-ci = { repository = "purpleprotocol/mimalloc_rust" }

[dependencies]
libmimalloc-sys = { path = "libmimalloc-sys", version = "0.1.24", default-features = false }

[features]
default = ["secure"]
secure = ["libmimalloc-sys/secure"]
override = ["libmimalloc-sys/override"]
debug = ["libmimalloc-sys/debug"]
debug_in_debug = ["libmimalloc-sys/debug_in_debug"]
local_dynamic_tls = ["libmimalloc-sys/local_dynamic_tls"]

# Allow to select different mimalloc branch
v1_dev = ["libmimalloc-sys/v1_dev"] # v1 dev branch
v2_dev = ["libmimalloc-sys/v2_dev"] # v2 dev-slice branch
# Trigger git submodule update to have the latest upstream commit to be used
# This will be for all submodules, master, dev and dev-slice
# Since mimalloc isn't fully ABI stable at the moment, it could cause issues.
submodule_update = ["libmimalloc-sys/submodule_update"]
