[package]
name = "mimalloc"
version = "0.1.50"
authors = [
    "Octavian Oncescu <octavonce@gmail.com>",
    "Vincent Rouillé <vincent@speedy37.fr>",
    "Thom Chiovoloni <chiovolonit@gmail.com>",
]
edition = "2018"
repository = "https://github.com/purpleprotocol/mimalloc_rust"
keywords = ["mimalloc", "allocator", "encrypted-heap", "performance"]
categories = ["memory-management", "api-bindings"]
description = "Performance and security oriented drop-in allocator"
license = "MIT"
readme = "README.md"

[workspace]
members = [
    "libmimalloc-sys",
    "libmimalloc-sys/sys-test",
    "test-override-with-dylib",
]

[badges]
travis-ci = { repository = "purpleprotocol/mimalloc_rust" }

[dependencies]
libmimalloc-sys = { path = "libmimalloc-sys", version = "0.1.47", default-features = false }

[features]
default = []
secure = ["libmimalloc-sys/secure"]
override = ["libmimalloc-sys/override"]
debug = ["libmimalloc-sys/debug"]
debug_in_debug = ["libmimalloc-sys/debug_in_debug"]
local_dynamic_tls = ["libmimalloc-sys/local_dynamic_tls"]
win_direct_tls = ["libmimalloc-sys/win_direct_tls"]
no_thp = ["libmimalloc-sys/no_thp"]
extended = ["libmimalloc-sys/extended"]
v2 = ["libmimalloc-sys/v2"]
