module(name = "mimalloc_rust")

####################
# Bazel Dependencies
####################

bazel_dep(name = "rules_rust", version = "0.70.0")

##########################
# Configure Rust toolchain
##########################

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

##################
# Configure Crates
##################

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")