[package]
name = "libmimalloc-sys"
version = "0.1.39"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2018"
repository = "https://github.com/purpleprotocol/mimalloc_rust/tree/master/libmimalloc-sys"
keywords = ["allocator", "encrypted-heap", "performance"]
categories = ["memory-management", "api-bindings"]
description = "Sys crate wrapping the mimalloc allocator"
license = "MIT"
links = "mimalloc"
exclude = [
    "/c_src/mimalloc/bin",
    "/c_src/mimalloc/cmake",
    "/c_src/mimalloc/doc",
    "/c_src/mimalloc/docs",
    "/c_src/mimalloc/ide",
    "/c_src/mimalloc/test",
]

[dependencies]
cty = { version = "0.2", optional = true }
libc = "0.2"

[build-dependencies]
cc = "1.0"

[features]
secure = []
debug = []
debug_in_debug = []
override = []
extended = ["cty"]
arena = []
local_dynamic_tls = []
no_thp = []

# Show `extended` on docs.rs since it's the full API surface.
[package.metadata.docs.rs]
features = ["extended"]
