[package]
name = "test-override-with-dylib"
version = "0.0.0"
license = "MIT OR Apache-2.0"
description = "A test helper for mimalloc"
edition = "2018"
publish = false

[dependencies]
libc = { version = "^0.2.182", default-features = false }
libmimalloc-sys = { path = "../libmimalloc-sys" }

[build-dependencies]
cc = "^1.2.56"

[features]
override = ["libmimalloc-sys/override"]
